// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`content state > adds a tree to a plot 1`] = `
{
  "plots": {
    "plot": {
      "trees": {
        "aa": {
          "nodes": {
            "a": {
              "label": "N",
              "offset": {
                "dTreeX": 0,
                "dTreeY": 0,
              },
              "slice": [
                0,
                4,
              ],
              "triangle": false,
            },
            "b": {
              "label": "N",
              "offset": {
                "dTreeX": 0,
                "dTreeY": 0,
              },
              "slice": [
                5,
                10,
              ],
              "triangle": false,
            },
          },
          "offset": {
            "dPlotX": 0,
            "dPlotY": 0,
          },
          "sentence": "tree state",
        },
        "zz": {
          "nodes": {},
          "offset": {
            "dPlotX": 105,
            "dPlotY": 88,
          },
          "sentence": "",
        },
      },
    },
  },
}
`;

exports[`content state > deletes a node from a tree 1`] = `
{
  "plots": {
    "plot": {
      "trees": {
        "aa": {
          "nodes": {
            "a": {
              "label": "N",
              "offset": {
                "dTreeX": 0,
                "dTreeY": 0,
              },
              "slice": [
                0,
                4,
              ],
              "triangle": false,
            },
          },
          "offset": {
            "dPlotX": 0,
            "dPlotY": 0,
          },
          "sentence": "tree state",
        },
      },
    },
  },
}
`;

exports[`content state > inserts a node into a tree 1`] = `
{
  "plots": {
    "plot": {
      "trees": {
        "aa": {
          "nodes": {
            "a": {
              "label": "N",
              "offset": {
                "dTreeX": 0,
                "dTreeY": 0,
              },
              "slice": [
                0,
                4,
              ],
              "triangle": false,
            },
            "b": {
              "label": "N",
              "offset": {
                "dTreeX": 0,
                "dTreeY": 0,
              },
              "slice": [
                5,
                10,
              ],
              "triangle": false,
            },
            "c": {
              "children": [
                "a",
                "b",
              ],
              "label": "NP",
              "offset": {
                "dTreeX": 0,
                "dTreeY": 0,
              },
            },
          },
          "offset": {
            "dPlotX": 0,
            "dPlotY": 0,
          },
          "sentence": "tree state",
        },
      },
    },
  },
}
`;

exports[`content state > reacts to a change in the sentence 1`] = `
{
  "plots": {
    "plot": {
      "trees": {
        "aa": {
          "nodes": {
            "a": {
              "label": "N",
              "offset": {
                "dTreeX": 0,
                "dTreeY": 0,
              },
              "slice": [
                0,
                3,
              ],
              "triangle": false,
            },
            "b": {
              "label": "N",
              "offset": {
                "dTreeX": 0,
                "dTreeY": 0,
              },
              "slice": [
                4,
                9,
              ],
              "triangle": false,
            },
          },
          "offset": {
            "dPlotX": 0,
            "dPlotY": 0,
          },
          "sentence": "tee state",
        },
      },
    },
  },
}
`;

exports[`content state > removes a tree from a plot 1`] = `
{
  "plots": {
    "plot": {
      "trees": {},
    },
  },
}
`;

exports[`content state > sets the label of a node 1`] = `
{
  "plots": {
    "plot": {
      "trees": {
        "aa": {
          "nodes": {
            "a": {
              "label": "NP",
              "offset": {
                "dTreeX": 0,
                "dTreeY": 0,
              },
              "slice": [
                0,
                4,
              ],
              "triangle": false,
            },
            "b": {
              "label": "N",
              "offset": {
                "dTreeX": 0,
                "dTreeY": 0,
              },
              "slice": [
                5,
                10,
              ],
              "triangle": false,
            },
          },
          "offset": {
            "dPlotX": 0,
            "dPlotY": 0,
          },
          "sentence": "tree state",
        },
      },
    },
  },
}
`;

exports[`content state > sets whether a terminal node connects to its slice with a triangle 1`] = `
{
  "plots": {
    "plot": {
      "trees": {
        "aa": {
          "nodes": {
            "a": {
              "label": "N",
              "offset": {
                "dTreeX": 0,
                "dTreeY": 0,
              },
              "slice": [
                0,
                4,
              ],
              "triangle": false,
            },
            "b": {
              "label": "N",
              "offset": {
                "dTreeX": 0,
                "dTreeY": 0,
              },
              "slice": [
                5,
                10,
              ],
              "triangle": true,
            },
          },
          "offset": {
            "dPlotX": 0,
            "dPlotY": 0,
          },
          "sentence": "tree state",
        },
      },
    },
  },
}
`;
